# renogy-ha

./: .gitignore  AGENTS.md  CHANGELOG.md  GITHUB_PR_CONTENT.md  PERSISTENT_CONNECTION_FAILURE_ANALYSIS.md  README.md  branch_health_report.txt  clean_env.sh  hacs.json  pyproject.toml  release-please-config.json
.beads/: .gitignore  config.yaml  metadata.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: dependabot.yml
.github/workflows/: beta-release.yml  hassfest.yml  release.yml  test.yml  validate.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1768190369066-03dedahlf.txt  session-1768190369066-b86t31xoh-auto-save-1768190399068.json
custom_components/renogy/: .gitignore  __init__.py  binary_sensor.py  ble.py  config_flow.py  const.py  device_name.py  manifest.json  modbus.py  number.py  select.py  sensor.py  shunt_ble.py  shunt_handler.py  shunt_parser.py  strings.json  switch.py
docs/: CONTRIBUTING.md  MULTI_DEVICE_DEPLOYMENT_GUIDE.md  README_STABILITY_TESTING.md  SHUNT300_SENSORS.md  TEST_ANALYSIS_24H_STABILITY.md  TEST_ANALYSIS_4H_STABILITY.md  connection-modes.md  health-card.md  renogy-ble-fork-changes.md  test_branch.md
docs/planning/: spec.md
memories/repo/: pytest_test_file_naming.md  test_structure.md
tests/: test_availability.py  test_binary_sensor.py  test_ble.py  test_config_flow.py  test_device.py  test_device_name.py  test_init.py  test_modbus.py  test_number.py  test_sensor_setup.py  test_shunt300.py  test_switch.py
tests/mocks/: ha_device.py  (+2 more)
(+12 files in other folders)
