[project]
name = "renogy-ha"
version = "0.2.9"
description = "Home Assisstant integration for Renogy devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=0.22.3",
    "bleak-retry-connector>=3.9.0",
    "homeassistant>=2025.4.4",
    "renogy-ble>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "asyncio: mark test as an asyncio coroutine",
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["I", "E", "F"]  # I = isort, E = pycodestyle, F = pyflakes

[tool.ruff.format]
quote-style = "double"
